--- a/iiboReset.css
+++ b/iiboReset.css
@@ -1,6 +1,6 @@
 html {
   margin: 0;
   padding: 0;
-  font-size: 99pt;
-  font-family: "Comic Sans MS", sans-serif;
+  font-size: 100%;
+  font-family: sans-serif;
 }
