--- a/iiboReset.scss
+++ b/iiboReset.scss
@@ -1,1 +1,1 @@
-html { margin:0;padding:0;font-size:99pt;font-family: "Comic Sans MS", sans-serif; }
+html { margin:0;padding:0;font-size:100%;font-family:sans-serif; }
