--- a/iiboReset.scss
+++ b/iiboReset.scss
@@ -1,1 +1,1 @@
-html { margin:0;padding:0;font-size:100%;font-family:sans-serif; }
+html,body { margin:0;padding:0;font-size:100%;font-family:sans-serif; } header,footer,div,p,h1,h2,h3,h4,h5,h6,span { margin:0;padding:0; }
