--- a/iiboReset.css
+++ b/iiboReset.css
@@ -9,3 +9,8 @@ header, footer, div, p, h1, h2, h3, h4, h5, h6, span {
   margin: 0;
   padding: 0;
 }
+
+ol, ul {
+  margin: 0;
+  padding: 0 0 0 50px;
+}
